syntax = "proto3";

package task;

option java_multiple_files = true;
option java_package = "nz.geek.jack.task.api";
option java_outer_classname = "TaskApiProto";

message TaskAddedEvent {
  string task_id = 1;
  string title = 2;
  string createdAt = 3;
}

message TaskCompletedEvent {
  string task_id = 1;
}
